2007-08-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* BinaryReader.cs: Fixed line endings.
	* FileStream.cs: Rename name argument to path. Spaces to tabs.

2007-08-20  William Holmes  <billholmes54@gmail.com>

	*File.cs:  Add implementation for IO.File.Replace methods.
	*MonoIO.cs: Declared an internal call for ReplaceFile

	Code is contributed under MIT/X11 license.

2007-07-31  Dick Porter  <dick@ximian.com>

	* MonoIO.cs: Fix formatting of 'access denied' exception when the
	path info isn't known.  Fixes bug 82141.

2007-07-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* Directory.cs: Renamed Move arguments to match MS. Allow Move to be
	used to move files, patch by Robert Jordan. Fixes bug #81912. Spaces
	to tabs.

2007-06-21  Dick Porter  <dick@ximian.com>

	* FileStream.cs: Fix FileShare test, fixing better bug 79250.

2007-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* UnmanagedMemoryStream.cs : added Closed event for sys.Resources use.
	* IntPtrStream.cs : added internal get_BaseAddress(), for the same.

2007-05-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* UnmanagedMemoryStream.cs: In Read and ReadByte, use Marshal.ReadByte
	to read bytes as this allows us to start reading from the current
	position. In Read, return 0 when reading beyond the end of the stream
	and only read bytes until the end of the stream (not capacity).
	In ReadByte, return -1 when reading beyond the end of the stream.
	In SetLength: changed argument validation (and reported exceptions) to
	match MS, removed duplicate access check and changed the current
	position if length is less than position. In Write: throw
	NotSupportedException when attempting to write beyond capacity, use
	Marshal.WriteByte since that allows us to start writing from the
	current position. Adjust length when position moves beyond length
	in both Write and WriteByte. Allow position to be moved beyond
	capacity of stream. Fixed position using Seek (=+ typo). Changed